--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
