--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,38 @@
+# Node modules (installed dependencies)
+node_modules/
+
 # Logs
-logs
+logs/gi
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+
+# Build directories
+dist/
+build/
+
+# Optional npm cache directory
+.npm
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
