--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "jsx": "react-jsx",       // or "react-jsxdev" for dev
+    "esModuleInterop": true,  // required for default imports
+    "allowSyntheticDefaultImports": true,
   }
 }
